versioned_docs/version-2.9/account/license/renew.md
---
id: renew
title: Renew License
sidebar_label: Renew License
---

Beaver Builder licenses renewal every year and are set to auto-renew by default for purchases made after May 1st, 2017.

If you purchased Beaver Builder license before May 1st, 2017, you will need to manually renew your license from your account page. You’ll be able to renew one month before your subscription expires.

:::info

You can view your subscription renewal date by logging into your Beaver Builder [My Account page](../index.md).

:::

## Cancel Automatic Renewal

If you cancel autorenewal, you will need to manually renew your subscription each year. You can cancel autorenewal at any time from your account page and follow these steps:

1. Go to your [My Account](https://www.wpbeaverbuilder.com/my-account/) page and scroll to the **My Subscriptions** section.
2. Click the **Cancel Renewal** button next to the subscription you'd like to cancel.
   If you don't see the **Cancel Renewal** button, it means you're not in the autorenewal program and you'll have to renew it manually each year.

:::caution

We cannot reinstate auto-renewal once you cancel it, but you can still renew your subscription manually.

:::

If you do not renew your Beaver Builder license, see the [License Expiry](expiry.md) article for more information.

## Renew Notifcations

You will receive an email notification one week before your subscription expires and another email one week after your subscription expires. These emails will contain a link to renew your subscription.

## Renewal Discount

You're eligible for a 40% discount if you purchased Beaver Builder **before October 13, 2022**. Your subscription discount pricing will remain unchanged as long as you renew within 2 weeks of the expiration date.

In addition, licenses can be renewed up to 30 days early without changing the renewal date. So in total, you have 44 days to renew and still receive the renewal discount.

You'll receive an email the day your subscription expires with a reminder to renew. You can renew your subscription after logging into your Beaver Builder account area. We will also send out a reminder email one week from the day your subscription expires.

If for some reason you don't receive these emails, [contact us](https://www.wpbeaverbuilder.com/contact/) and we'll get you fixed right up!

### Legacy Plans

If a customer is currently eligible for a renewal discount on their legacy plan and decides to upgrade to one of our new plans, they will no longer be eligible for that discount.

:::warning Important

The new plans do not include renewal discounts, and once the upgrade is made, any previously applied renewal discounts from the legacy plan will not transfer to the new plan. Customers should carefully consider this when deciding whether to upgrade, as the pricing structure differs between the legacy and new plans.

:::
