versioned_docs/version-2.11/account/license/renew.md
---
id: renew
title: Renew License
sidebar_label: Renew License
---

Beaver Builder licenses renewal every year and are set to auto-renew by default for purchases made after May 1st, 2017.

If you purchased Beaver Builder license before May 1st, 2017, you will need to manually renew your license from your account page. You’ll be able to renew one month before your subscription expires.

:::info

You can view your subscription renewal date by logging into your Beaver Builder [My Account page](../index.md).

:::

## Cancel Automatic Renewal

If you cancel automatic renewal, you will need to manually renew your subscription each year unless you later resume auto renewal for an eligible subscription. You can cancel automatic renewal at any time from your account page by following these steps:

1. Go to your **My Account** page and scroll to the **My Subscriptions** section.
2. Click the **Cancel Renewal** button next to the subscription you'd like to cancel.

If you do not see the **Cancel Renewal** button, it means your subscription is not currently set to automatic renewal and you will need to renew it manually each year.

## Resume Automatic Renewal

If you previously cancelled automatic renewal, you may be able to turn it back on from the **My Subscriptions** section of your account.

When a subscription is changed to manual renewal, the **Cancel Renewal** button changes to **Resume Auto Renewal** for eligible subscriptions.

1. Go to your **My Account** page and scroll to the **My Subscriptions** section.
2. Click **Resume Auto Renewal** next to the subscription you'd like to reactivate.

If your subscription was paid by credit card through Stripe, Beaver Builder will check with Stripe to confirm that your saved payment details are still valid.

- If your payment details are valid, automatic renewal will be resumed.
- If your payment details are no longer valid, you'll be redirected to update your card information before automatic renewal can be turned back on.

If your subscription was paid through PayPal, the **Resume Auto Renewal** button will not appear because PayPal subscriptions cannot be reactivated once automatic renewal has been cancelled.

:::caution
  Automatic renewal can only be resumed for eligible Stripe subscriptions with valid saved card details. PayPal subscriptions cannot be resumed after cancellation and must be renewed manually.
:::

If you do not renew your Beaver Builder license, see the [License Expiry](expiry.md) article for more information.

## Renew Notifcations

You will receive an email notification one week before your subscription expires and another email one week after your subscription expires. These emails will contain a link to renew your subscription.

## Renewal Discount

You're eligible for a 40% discount if you purchased Beaver Builder **before October 13, 2022**. Your subscription discount pricing will remain unchanged as long as you renew within 2 weeks of the expiration date.

In addition, licenses can be renewed up to 30 days early without changing the renewal date. So in total, you have 44 days to renew and still receive the renewal discount.

You'll receive an email the day your subscription expires with a reminder to renew. You can renew your subscription after logging into your Beaver Builder account area. We will also send out a reminder email one week from the day your subscription expires.

If for some reason you don't receive these emails, [contact us](https://www.wpbeaverbuilder.com/contact/) and we'll get you fixed right up!

### Legacy Plans

If a customer is currently eligible for a renewal discount on their legacy plan and decides to upgrade to one of our new plans, they will no longer be eligible for that discount.

:::warning Important

The new plans do not include renewal discounts, and once the upgrade is made, any previously applied renewal discounts from the legacy plan will not carry over. Switching from your legacy license is permanent and cannot be reversed, so customers should carefully consider this when deciding whether to upgrade, as the pricing structure differs between the legacy and new plans.

:::
